# android-dev-qa

./: .gitignore  AGENTS.md  CODE_REVIEW.md  README.md  mcp_server.py  project.yaml  pyproject.toml
.hermes/plans/: 2026-06-07_140000-android-qa-full-fix.md
scripts/: adb_keyboard_setup.sh  ai_analysis.py  analyzer.py  batch_analyzer.py  device.py  logcat_capture.py  recorder.py  reporter.py  runner.py  screencap.py
scripts/analysis/: __init__.py
scripts/backends/: __init__.py  adb_backend.py  base.py
scripts/vision/: __init__.py
templates/: test_plan.json
tests/: test_core.py
